<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context=".LoginActivity">

    <ImageView
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/whatsapp_cookie"
        app:tint="@color/dark_age_blue" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/welcome_to_cookie_whatsapp"
        android:textColor="@color/black"
        android:textSize="26sp"
        app:fontFamily="@font/raleway_black" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:paddingEnd="8dp"
        android:text="@string/please_enter_your_mobile_number"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
        android:textColor="@color/regular_gray"
        app:fontFamily="@font/raleway_semi_bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:orientation="horizontal">

        <com.rilixtech.widget.countrycodepicker.CountryCodePicker
            android:id="@+id/ccp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="4dp"
            app:ccp_backgroundColor="@color/white"
            app:ccp_showFlag="false"
            app:ccp_textColor="@color/regular_black"
            app:ccp_textFont="raleway_semi_bold.ttf" />

        <EditText
            android:id="@+id/etPhoneNumber"
            android:layout_width="150dp"
            android:textSize="18sp"
            android:layout_height="wrap_content"
            app:fontFamily="@font/raleway_semi_bold"
            android:textStyle="bold"
            android:importantForAutofill="no"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="32dp"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:maxLength="10" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ProgressBar
            android:id="@+id/pbCheckingPhoneNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminateTint="@color/dark_age_blue"
            android:visibility="gone" />

    </FrameLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnContinue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:backgroundTint="@color/dark_age_blue"
        android:letterSpacing="0.05"
        android:paddingHorizontal="108dp"
        android:paddingVertical="16dp"
        android:text="@string/continue_text"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:cornerRadius="40dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="64dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/by_continuing"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

        <TextView
            android:id="@+id/tvPrivacyPolicy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/privacy_policy_and_terms"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textStyle="bold"
            app:fontFamily="@font/raleway_black" />
    </LinearLayout>

</LinearLayout>