<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/llParentSignUp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context=".ui.SignUpActivity">

    <FrameLayout
        android:id="@+id/flProfileImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/ivProfileImage"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_gravity="bottom|end"
            android:adjustViewBounds="true"
            android:clickable="true"
            android:focusable="true"
            android:scaleType="centerCrop"
            android:src="@drawable/profile_img_placeholder"
            app:shapeAppearanceOverlay="@style/ImageView.Rounded" />


        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/ivAddImageIconBackground"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_gravity="bottom|end"
            android:background="@color/white"
            app:shapeAppearanceOverlay="@style/ImageView.Rounded" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/ivAddImageIcon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="bottom|end"
            android:layout_margin="2dp"
            android:adjustViewBounds="true"
            android:clickable="true"
            android:focusable="true"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_add_img_round"
            app:shapeAppearanceOverlay="@style/ImageView.Rounded" />

    </FrameLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/here_we_go"
        android:textColor="@color/black"
        android:textSize="26sp"
        app:fontFamily="@font/raleway_black" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:paddingEnd="44dp"
        android:text="@string/please_enter_name_photo"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
        android:textColor="@color/regular_gray"
        app:fontFamily="@font/raleway_semi_bold" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="96dp"
        android:hint="@string/your_name"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:maxLines="1"
        android:textSize="22sp"
        android:textStyle="bold"
        app:fontFamily="@font/raleway_semi_bold" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ProgressBar
            android:id="@+id/pbUploadingToFirebase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminateTint="@color/bright_green"
            android:visibility="gone" />

    </FrameLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnFinish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:backgroundTint="@color/light_green"
        android:letterSpacing="0.05"
        android:paddingHorizontal="108dp"
        android:paddingVertical="16dp"
        android:text="@string/finish_text"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:cornerRadius="40dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="64dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/by_continuing"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

        <TextView
            android:id="@+id/tvPrivacyPolicy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/privacy_policy_and_terms"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textStyle="bold"
            app:fontFamily="@font/raleway_black" />
    </LinearLayout>

</LinearLayout>